get access token from slack

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 
 <body>
 
-Set this to access_token: <%= clientId %>
+Set this to access_token: <code><%= accessToken %></code>
 
 </body>
 </html>
