--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,12 @@
 
 <body>
 
-Set this to access_token: <code><%= accessToken %></code>
+<div class="flex-container">
+  <a href="
+https://slack.com/oauth/authorize?client_id=<%= clientId %>&amp;scope=channels%3Ahistory+groups%3Ahistory+im%3Ahistory+team%3Aread">
+    <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+  </a>
+</div>
 
 </body>
 </html>
