--- a/views/pages/accessToken.ejs
+++ b/views/pages/accessToken.ejs
@@ -6,7 +6,13 @@
 
 <body>
 
-Set this to access_token: <code><%= accessToken %></code>
+<div class="container">
+  <h1>Install slack patron</h1>
+
+  <p>See <a href="https://github.com/tyage/slack-patron">Github</a></p>
+
+  <p>Set this to access_token: <code><%= accessToken %></code></p>
+</div>
 
 </body>
 </html>
