--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
   <div class="flex-content">
     <h2 id="install-title">Install Slack patron?</h2>
     <a href="
-https://slack.com/oauth/authorize?client_id=<%= encodeURIComponent(clientId) %>&amp;scope=<%= encodeURIComponent(scope) %>">
+https://slack.com/oauth/authorize?client_id=<%= encodeURIComponent(clientId) %>&amp;scope=<%= encodeURIComponent(permissions) %>">
       <img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
     </a>
   </div>
